Revert "Avoid cropping project images."
This reverts commit ea9329dd0d0a71b5a5588bb1dd45cfaad2deee6b.

--- a/assets/css/project-list.css
+++ b/assets/css/project-list.css
@@ -443,7 +443,6 @@
   @supports (object-fit: cover) {
     .proposals .image {
       padding-top: 79.25925926%; /* 428px / 540px */
-      padding-top: 100%;
       display: block;
       position: relative;
       background: rgba(0, 0, 0, 0.1);
@@ -456,7 +455,6 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-fit: contain;
       /*  
       filter: grayscale(100%);
       transition: filter 0.2s;
